# demo_typing_in_python

./: README.md  pyproject.toml  requirements.txt  typing_01_basics.py  typing_02_functions.py  typing_any.py  typing_literalstring.py  typing_never.py  typing_protocols.py  typing_self.py  typing_simple_example.py
typing_demo/: basics.py  callable.py  collections_abc.py  collections_dict.py  collections_iterable.py  collections_list.py  collections_list_old.py  collections_tuple_records.py  duck_typing.py  generics_class.py  generics_extended.py  generics_simple.py  literalstring.py  newtype.py  optional.py  protocols.py  pydantic_validation.py  simple_example_done.py
